<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_front">

    <fragment
        android:id="@+id/nav_front"
        android:name="ltd.hujing.myaccount.ui.home.HomeFragment"
        android:label="@string/menu_front"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_history"
        android:name="ltd.hujing.myaccount.ui.history.GalleryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_analyse"
        android:name="ltd.hujing.myaccount.ui.additem.SlideshowFragment"
        android:label="@string/menu_analyse"
        tools:layout="@layout/fragment_slideshow" />
</navigation>