<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@mipmap/home_top_background">

        <TextView
            android:id="@+id/home_text_assets"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:gravity="center"
            android:text="@string/home_assets"
            android:textSize="30sp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/home_text_assets_value"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:ems="10"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/home_assets_value"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="5">

                <TextView
                    android:id="@+id/home_text_income"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/home_income"
                    android:gravity="center"
                    tools:ignore="NestedWeights"/>

                <TextView
                    android:id="@+id/homo_text_income_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/home_income_static"
                    android:textColor="#FFFFFF"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="5">

                <TextView
                    android:id="@+id/home_text_expenditure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/home_expenditure"
                    android:gravity="center"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/home_text_expenditure_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="@string/home_expenditure_static"
                    android:textColor="#FFFFFF"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <view class="androidx.appcompat.app.AlertController$RecycleListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </view>
</LinearLayout>